add lista c tds as formulas

--- a/CSS/capsules.css
+++ b/CSS/capsules.css
@@ -43,7 +43,7 @@
     height: 320px;
     justify-content: center;
     /* padding: 60px; */
-    background-color: aliceblue;
+    background-color: #00000000;
     min-width: 290px;
   }
   /* .tstDiv form {
