--- a/CSS/pesquisa.css
+++ b/CSS/pesquisa.css
@@ -9,7 +9,7 @@
     text-align: center;
     display: none;
     padding: 0px;
-    width: calc(90vw);
+    width: 80vw;
     left: 0px;
     top: 4rem;
     /* border: 1px solid var(--Black); */
@@ -18,24 +18,29 @@
     z-index: 3;
 }
 
-.resposta{
+.resposta, .resposta2{
     padding: 10px;
     background-color: var(--WhiteFocus);
-    z-index: 3;
-    width: 90vw;
+    width: 80vw;
+    text-align: center;
 }
-.resposta:hover{
+
+.resposta2{
+    width: 20vw;
+}
+
+.resposta:hover, .resposta2:hover{
     cursor: pointer;
 }
-.resposta:nth-child(even){
-    padding: 10px;
+
+.resposta:nth-of-type(even), .resposta2:nth-of-type(even){
     background-color: var(--LightGray);
 }
 
 #lista {
     position: absolute;
     top: 4.5rem;
-    left: 5vw;
+    left: 7vw;
     list-style-type: none;
     margin: 0px;
     padding: 0px;
@@ -46,9 +51,9 @@
 #searchBar{
     position: absolute;
     height: 3rem;
-    width: 90vw;
+    width: 80vw;
     top: 1.5rem;
-    left: 5vw;
+    left: 7vw;
     padding-left: 2vw;
     background-color: var(--White);
     border: 0px;
@@ -66,8 +71,53 @@
     outline: var(--AlmostTransparent) solid 0px;
 }
 
+#BTNoutraLista{
+    position: absolute;
+    background-color: var(--White);
+    top: 1.5rem;
+    height: 3rem;
+    width: 3rem;
+    right: 7vw;
+    border-radius: 1.5rem;
+    box-shadow: -6px 5px 7px var(--AlmostTransparent);
+    /* outline: solid 3px var(--LightGray); */
+    font-weight: bold;
+    z-index: 2;
+}
+
+.outraListaIcon{
+    height: 2.5rem;
+    width: 2.5rem;
+    margin: 0.25rem;
+}
+
+#outraLista{
+    height: calc(60vh - 2vw);
+    width: calc(20vw + 8px);
+    margin-top: 1vw; 
+    right: 1vw;
+    scrollbar-width: thin;
+    scrollbar-gutter: stable;
+    position: absolute;
+    overflow-y: auto;
+    /* overflow-x: hidden; */
+    padding: 0px;
+    list-style-type: none;
+    border-radius: 1rem;
+}
+
+#divOutraLista{
+    height: 60vh;
+    width: calc(22vw + 8px);
+    right: 0px;
+    position: absolute;
+    background-color: aquamarine;
+    border-radius: 1rem;
+}
+
 #searchBar:hover{
     transition: 100ms;
+    -webkit-transition: 100ms;
     background-color: var(--WhiteFocus);
 }
 
@@ -76,11 +126,12 @@
     width: 1.5rem;
     z-index: 2;
     position: absolute;
-    right: calc(1.5rem + 5vw);
+    left: calc(87vw - 3rem);
     top: 2.25rem;
     cursor: pointer;
 }
 #lupa:hover{
     transition: 100ms;
+    -webkit-transition: 100ms;
     transform: scale(110%);
 }
