--- a/CSS/pesquisa.css
+++ b/CSS/pesquisa.css
@@ -83,6 +83,7 @@
     /* outline: solid 3px var(--LightGray); */
     font-weight: bold;
     z-index: 2;
+    transition: top 0.15s;
 }
 
 .outraListaIcon{
@@ -92,17 +93,23 @@
 }
 
 #outraLista{
-    height: calc(60vh - 2vw);
-    width: calc(20vw + 8px);
-    margin-top: 1vw; 
-    right: 1vw;
-    scrollbar-width: thin;
-    scrollbar-gutter: stable;
+    /* height: calc(60vh - 2vw);
+    width: calc(20vw + 8px); pq + 11px? nao sei */
     position: absolute;
-    overflow-y: auto;
-    /* overflow-x: hidden; */
+    /* overflow-y: auto; */
     padding: 0px;
     list-style-type: none;
+}
+
+.DivOutraListaBoogaloo{
+    overflow: hidden;
+    height: calc(60vh - 2vw);
+    width: calc(20vw);
+    margin-top: 1vw;
+    right: 1vw;
+    scrollbar-width: thin;
+    position: absolute;
+    border: 1px solid black;
     border-radius: 1rem;
 }
 
@@ -111,13 +118,15 @@
     width: calc(22vw + 8px);
     right: 0px;
     position: absolute;
-    background-color: aquamarine;
+    overflow-y: hidden;
+    background-color: var(--White);
     border-radius: 1rem;
+    box-shadow: -6px 5px 7px var(--AlmostTransparent);
 }
 
 #searchBar:hover{
-    transition: 100ms;
-    -webkit-transition: 100ms;
+    transition: 50ms;
+    -webkit-transition: 50ms;
     background-color: var(--WhiteFocus);
 }
 
@@ -131,7 +140,7 @@
     cursor: pointer;
 }
 #lupa:hover{
-    transition: 100ms;
-    -webkit-transition: 100ms;
+    transition: 50ms;
+    -webkit-transition: 50ms;
     transform: scale(110%);
 }
