--- a/CSS/pesquisa.css
+++ b/CSS/pesquisa.css
@@ -18,15 +18,27 @@
     z-index: 3;
 }
 
-.resposta, .resposta2{
+.resposta, .resposta2, .resposta3{
     padding: 10px;
     background-color: var(--WhiteFocus);
     width: 80vw;
     text-align: center;
+    margin: 0px;
 }
 
-.resposta2{
+.resposta2, .resposta3{
     width: 20vw;
+}
+
+.resposta3{
+    background-color: var(--AlmostWhite);
+    /* border-bottom: 3px solid var(--Black);
+    border-top: 3px solid var(--Black); */
+    font-size: 1.2rem;
+}
+
+.resposta3:first-child{
+    border-top: 0px;
 }
 
 .resposta:hover, .resposta2:hover{
@@ -93,10 +105,10 @@
 }
 
 #outraLista{
-    /* height: calc(60vh - 2vw);
-    width: calc(20vw + 8px); pq + 11px? nao sei */
+    height: calc(60vh - 2vw);
+    width: calc(20vw + 19px); 
     position: absolute;
-    /* overflow-y: auto; */
+    overflow-y: auto;
     padding: 0px;
     list-style-type: none;
 }
@@ -109,13 +121,13 @@
     right: 1vw;
     scrollbar-width: thin;
     position: absolute;
-    border: 1px solid black;
+    box-shadow: 0px 0px 20px -5px var(--AlmostTransparent);
     border-radius: 1rem;
 }
 
 #divOutraLista{
     height: 60vh;
-    width: calc(22vw + 8px);
+    width: calc(22vw);
     right: 0px;
     position: absolute;
     overflow-y: hidden;
