arrumado o tema dark, consertado BUG MALDITO + outra coisa n lembro

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -36,7 +36,7 @@ body{
     top: 18px; 
     width: 210px; 
     height: 62px; 
-    background-color: var(--SecondAccentColor); 
+    background-color: var(--SecondAccentColorFlags); 
     border-radius: 10px;
 }
 
