--- a/CSS/root.css
+++ b/CSS/root.css
@@ -17,7 +17,7 @@
     --AccentColorBTN: #B6B7CF;              /* segunda cor principal do app, contraste com a base */
     --LightGray: #dddddd;                /* usado na caluladora, lista da barra de pesquisa */
     --LightGrayBTN: #dddddd;                /* usado na caluladora, lista da barra de pesquisa */
-    --AlmostWhite: #f0f0f0;              /* plano de fundo atras do bkgd, borda da barra de pesquisa */
+    --AlmostWhite: #888888;              /* plano de fundo atras do bkgd, borda da barra de pesquisa */
     --WhiteFocus: #fdfdfd;               /* focus na barra de pesquisa */
     --White: #ffffff;                    /* background */
     --White2: #ffffff;                    /* background */
