--- a/CSS/root.css
+++ b/CSS/root.css
@@ -26,6 +26,8 @@
     --AlmostBlack: #fdfdfd;
     --SecondAccentColorCalc: #605869;
     --textColorWindow: #FFFFFF;
+    --WhiteSwitch: #D2D2D2;
+    --Yellow: #eb9d0e;
 }
 
     /* 000000
