--- a/CSS/root.css
+++ b/CSS/root.css
@@ -26,8 +26,9 @@
     --AlmostBlack: #fdfdfd;
     --SecondAccentColorCalc: #605869;
     --textColorWindow: #FFFFFF;
-    --WhiteSwitch: #D2D2D2;
-    --Yellow: #eb9d0e;
+    --WhiteSwitch: #FFFFFF;
+    --WhiteSwitchCircle: #D2D2D2;
+    --Yellow: #000000;
 }
 
     /* 000000
